--- a/document.tex
+++ b/document.tex
@@ -1,11 +1,14 @@
-\documentclass[11pt,a4paper]{article}
+\documentclass[12pt,a4paper]{article}
 \usepackage[pdftex]{graphicx} % include images
 \usepackage[ngerman]{babel} % german-compatible output
+\usepackage[autostyle]{csquotes}
 \usepackage{calc} % calculations
 \usepackage{enumitem} % enumerations
 \usepackage[a4paper, lmargin=54pt, rmargin=54pt, tmargin=54pt, bmargin=54pt]{geometry} % page layout
 \usepackage{tabularx} % tables
 \usepackage{hyperref}
+\usepackage[parfill]{parskip} % new line instead of indentation between paragraphs
+\linespread{1.15}
 %\usepackage[
 %		backend=bibtex,
 %		bibwarn=true,
