--- a/document.tex
+++ b/document.tex
@@ -1,6 +1,7 @@
 \documentclass[12pt,a4paper]{article}
 \usepackage[pdftex]{graphicx} % include images
 \usepackage[ngerman]{babel} % german-compatible output
+\usepackage[T1]{fontenc} % Word wrap with special chars (e.g. ä, ö, ü,...)
 \usepackage[autostyle]{csquotes}
 \usepackage{calc} % calculations
 \usepackage{enumitem} % enumerations
